--- a/NotasAlumnosFX/src/Vista/login.css
+++ b/NotasAlumnosFX/src/Vista/login.css
@@ -6,9 +6,47 @@
 }
 
 .button{
-    -fx-background-color: rgba(265,256,256,0.1);
+    -fx-font-size: 170%;
+    -fx-font-family: Arial;
+    -fx-text-fill: black;
+    -fx-background-color: rgba(265,256,256,1);
+    -fx-pref-width: 110px;
+    -fx-pref-height: 60px;
+    -fx-background-radius: 25px;
 }
 
 .button:hover{
-    -fx-background-color: rgba(265,256,256,0.7);
+    -fx-background-color: rgba(1,1,1,0.7);
+    -fx-text-fill: white;
+    
+}
+
+.label{
+    -fx-text-fill: black;
+    -fx-font-family: Arial;
+    -fx-font-size: 170%;
+    -fx-display: flex; 
+    -fx-alignment: center;
+}
+
+.text-field{
+    -fx-background-color: rgba(265,256,256,1);
+    -fx-text-fill: black;
+    -fx-font-family: Arial;
+    -fx-font-size: 20px;
+    -fx-display: flex; 
+    -fx-alignment: center;
+}
+
+
+.text-field:hover{
+    -fx-background-color: rgba(265,256,256, 0.8);
+}
+
+.check-box{
+    -fx-text-fill: black;
+    -fx-font-family: Arial;
+    -fx-font-size: 20px;
+    -fx-display: flex; 
+    -fx-alignment: center;
 }
