--- a/NotasAlumnosFX/src/Vista/login.fxml
+++ b/NotasAlumnosFX/src/Vista/login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.net.*?>
 <?import java.util.*?>
@@ -7,20 +8,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="858.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.LoginController">
+<AnchorPane id="AnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onDragDetected="#mover" prefHeight="555.0" prefWidth="850.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.LoginController">
     <stylesheets>
         <URL value="@login.css" />
     </stylesheets>
    <children>
-      <Button fx:id="btnIngreso" layoutX="124.0" layoutY="322.0" mnemonicParsing="false" text="Ingresar" />
-      <CheckBox fx:id="docenteOn" layoutX="178.0" layoutY="104.0" mnemonicParsing="false" onAction="#cambio" text="Docente" />
-      <Label fx:id="label1" layoutX="194.0" layoutY="29.0" text="¡Bienvenido!" />
-      <Button fx:id="btnLimpiar" layoutX="238.0" layoutY="322.0" mnemonicParsing="false" text="Limpiar" />
-      <Label fx:id="label2" layoutX="21.0" layoutY="66.0" text="Para continuar, por favor indica si eres parte de los administradores o docente" />
-      <CheckBox fx:id="adminOn" layoutX="179.0" layoutY="138.0" mnemonicParsing="false" onAction="#cambio" text="Administrador" />
-      <TextField fx:id="txtUser" layoutX="153.0" layoutY="188.0" />
-      <TextField fx:id="txtContra" layoutX="153.0" layoutY="232.0" />
-      <Label layoutX="77.0" layoutY="192.0" text="Usuario: " />
-      <Label layoutX="69.0" layoutY="236.0" text="Contraseña:" />
+      <Button fx:id="btnIngreso" layoutX="79.0" layoutY="427.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="96.0" text="Ingresar" />
+      <CheckBox fx:id="docenteOn" layoutX="173.0" layoutY="131.0" mnemonicParsing="false" onAction="#cambio" text="Docente" />
+      <Label fx:id="label1" layoutX="103.0" layoutY="37.0" prefHeight="25.0" prefWidth="251.0" text="¡Bienvenido!" />
+      <Button fx:id="btnLimpiar" layoutX="260.0" layoutY="427.0" mnemonicParsing="false" text="Limpiar" />
+      <Label fx:id="label2" layoutX="46.0" layoutY="62.0" prefHeight="25.0" prefWidth="378.0" text="Para continuar, por favor indica si eres">
+         <font>
+            <Font name="Bell MT" size="12.0" />
+         </font></Label>
+      <CheckBox fx:id="adminOn" layoutX="173.0" layoutY="169.0" mnemonicParsing="false" onAction="#cambio" text="Administrador" />
+      <TextField fx:id="txtUser" layoutX="109.0" layoutY="268.0" onMouseClicked="#mover" />
+      <TextField fx:id="txtContra" layoutX="109.0" layoutY="343.0" onMouseClicked="#mover2" />
+      <Label fx:id="lblUser" layoutX="194.0" layoutY="274.0" text="Usuario" />
+      <Label fx:id="lblContra" layoutX="176.0" layoutY="349.0" text="Contraseña" />
+      <Label fx:id="label21" layoutX="50.0" layoutY="87.0" prefHeight="17.0" prefWidth="370.0" text="parte de los administradores o docente">
+         <font>
+            <Font name="Bell MT" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
