--- a/NotasAlumnosFX/src/Vista/MenuEvaluacion.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuEvaluacion.fxml
@@ -14,14 +14,15 @@
    <children>
       <Label layoutX="238.0" layoutY="14.0" text="Registro de Actividades" />
       <Label layoutX="47.0" layoutY="42.0" text="Nombre Actividad:" />
-      <Label layoutX="111.0" layoutY="73.0" text="Curso:" />
-      <Label layoutX="94.0" layoutY="108.0" text="Bimestre:" />
-      <Label layoutX="115.0" layoutY="144.0" text="Tipo:" />
-      <Label layoutX="76.0" layoutY="178.0" text="Ponderación:" />
+      <Label layoutX="127.0" layoutY="76.0" text="Curso:" />
+      <Label layoutX="105.0" layoutY="110.0" text="Bimestre:" />
+      <Label layoutX="132.0" layoutY="144.0" text="Tipo:" />
+      <Label layoutX="77.0" layoutY="178.0" text="Ponderación:" />
       <TextField fx:id="txtNombreActividad" layoutX="177.0" layoutY="37.0" />
       <TextField fx:id="txtPonderacion" layoutX="177.0" layoutY="173.0" />
       <ComboBox fx:id="txtCurso" layoutX="177.0" layoutY="71.0" prefWidth="150.0" />
       <ComboBox fx:id="txtBimestre" layoutX="177.0" layoutY="105.0" prefWidth="150.0" />
       <ComboBox fx:id="txtTipo" layoutX="177.0" layoutY="139.0" prefWidth="150.0" />
+      <Button fx:id="btnGuardar" layoutX="449.0" layoutY="53.0" mnemonicParsing="false" onAction="#Crear" text="Guardar" />
    </children>
 </AnchorPane>
