--- a/NotasAlumnosFX/src/Vista/login.fxml
+++ b/NotasAlumnosFX/src/Vista/login.fxml
@@ -13,10 +13,10 @@
         <URL value="@login.css" />
     </stylesheets>
    <children>
-      <Button fx:id="btnIngreso" layoutX="79.0" layoutY="427.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="96.0" text="Ingresar" />
+      <Button fx:id="btnIngreso" layoutX="79.0" layoutY="427.0" mnemonicParsing="false" onAction="#iniciar" prefHeight="37.0" prefWidth="96.0" text="Ingresar" />
       <CheckBox fx:id="docenteOn" layoutX="173.0" layoutY="131.0" mnemonicParsing="false" onAction="#cambio" text="Docente" />
       <Label fx:id="label1" layoutX="103.0" layoutY="37.0" prefHeight="25.0" prefWidth="251.0" text="¡Bienvenido!" />
-      <Button fx:id="btnLimpiar" layoutX="260.0" layoutY="427.0" mnemonicParsing="false" text="Limpiar" />
+      <Button fx:id="btnLimpiar" layoutX="260.0" layoutY="427.0" mnemonicParsing="false" onAction="#limpiar" text="Limpiar" />
       <Label fx:id="label2" layoutX="46.0" layoutY="62.0" prefHeight="25.0" prefWidth="378.0" text="Para continuar, por favor indica si eres">
          <font>
             <Font name="Bell MT" size="12.0" />
@@ -31,5 +31,6 @@
             <Font name="Bell MT" size="12.0" />
          </font>
       </Label>
+      <Label fx:id="errorUsPas" layoutX="95.0" layoutY="389.0" text="Usuario o Contraseña Incorrecta " textAlignment="CENTER" textFill="#ff0101" />
    </children>
 </AnchorPane>
