--- a/NotasAlumnosFX/src/Vista/MenuNotas.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuNotas.fxml
@@ -7,8 +7,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuEvaluacionController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuNotasController">
     <stylesheets>
-        <URL value="@menuevaluacion.css"/>
+        <URL value="@menunotas.css"/>
     </stylesheets>
 </AnchorPane>
