--- a/NotasAlumnosFX/src/Vista/MenuAdmin.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuAdmin.fxml
@@ -14,15 +14,13 @@
    <children>
       <Label fx:id="MENUADMIN" layoutX="93.0" layoutY="14.0" text="Menu Administrador" />
       <Label layoutX="182.0" layoutY="46.0" text="CUI" />
-      <Label layoutX="135.0" layoutY="96.0" text="Nombre de usuario" />
-      <Label layoutX="159.0" layoutY="147.0" text="Contraseña" />
-      <TextField fx:id="txtCui" layoutX="106.0" layoutY="63.0" />
-      <TextField fx:id="txtUsuario" layoutX="106.0" layoutY="113.0" />
-      <TextField fx:id="txtContra" layoutX="108.0" layoutY="164.0" />
-      <Label layoutX="176.0" layoutY="198.0" text="Grado" />
-      <TextField fx:id="txtGrado" layoutX="106.0" layoutY="215.0" />
-      <Label layoutX="169.0" layoutY="250.0" text="Seccion" />
-      <TextField fx:id="txtSeccion" layoutX="106.0" layoutY="267.0" />
+      <Label layoutX="134.0" layoutY="137.0" text="Nombre de usuario" />
+      <Label layoutX="160.0" layoutY="180.0" text="Contraseña" />
+      <TextField fx:id="txtCui" layoutX="109.0" layoutY="68.0" />
+      <TextField fx:id="txtUsuario" layoutX="113.0" layoutY="154.0" />
+      <TextField fx:id="txtContra" layoutX="113.0" layoutY="197.0" />
+      <Label layoutX="181.0" layoutY="223.0" text="Grado" />
+      <Label layoutX="172.0" layoutY="265.0" text="Seccion" />
       <TableView fx:id="tablawe" layoutX="393.0" layoutY="19.0" onMouseClicked="#seleccionar" prefHeight="536.0" prefWidth="598.0">
         <columns>
           <TableColumn fx:id="UsuarioID" prefWidth="39.0" text="ID" />
@@ -38,9 +36,11 @@
       <Button fx:id="btnBorrar" layoutX="64.0" layoutY="482.0" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
       <Button fx:id="btnModificar" layoutX="232.0" layoutY="427.0" mnemonicParsing="false" onAction="#modificar" text="Modificar" />
       <Button fx:id="BtnLimpiar" layoutX="232.0" layoutY="482.0" mnemonicParsing="false" onAction="#limpiar" text="Limpiar" />
-      <TextField fx:id="txtRol" layoutX="102.0" layoutY="317.0" />
-      <Label layoutX="179.0" layoutY="300.0" text="Rol" />
-      <Label layoutX="184.0" layoutY="351.0" text="Nombre" />
-      <TextField fx:id="txtNombre" layoutX="107.0" layoutY="368.0" />
+      <Label layoutX="193.0" layoutY="307.0" text="Rol" />
+      <Label layoutX="172.0" layoutY="94.0" text="Nombre" />
+      <TextField fx:id="txtNombre" layoutX="113.0" layoutY="111.0" />
+      <ChoiceBox fx:id="conGrado" layoutX="112.0" layoutY="240.0" prefHeight="25.0" prefWidth="177.0" />
+      <ChoiceBox fx:id="conSeccion" layoutX="115.0" layoutY="282.0" prefHeight="25.0" prefWidth="177.0" />
+      <ChoiceBox fx:id="conROl" layoutX="115.0" layoutY="324.0" prefHeight="25.0" prefWidth="177.0" />
    </children>
 </AnchorPane>
