--- a/NotasAlumnosFX/src/Vista/MenuEstudiante.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuEstudiante.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.net.*?>
 <?import java.util.*?>
@@ -7,29 +8,33 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="Controlador.MenuEstudianteController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuEstudianteController">
     <stylesheets>
         <URL value="@menuestudiante.css" />
     </stylesheets>
    <children>
-      <Pane prefHeight="493.0" prefWidth="962.0">
+      <Pane layoutX="-7.0" prefHeight="493.0" prefWidth="962.0">
          <children>
             <Button layoutX="72.0" layoutY="364.0" mnemonicParsing="false" onAction="#btnAgregar" text="Agregar" />
             <Button layoutX="77.0" layoutY="416.0" mnemonicParsing="false" onAction="#btnAnular" text="Anular" />
             <Button layoutX="175.0" layoutY="364.0" mnemonicParsing="false" onAction="#btnActualizar" text="Actualizar" />
             <Button layoutX="177.0" layoutY="416.0" mnemonicParsing="false" onAction="#btnReactivar" text="Reactivar" />
-            <Label layoutX="88.0" layoutY="54.0" text="Cui" />
-            <Label layoutX="42.0" layoutY="103.0" text="Codigo Personal" />
-            <Label layoutX="71.0" layoutY="163.0" text="Nombre" />
-            <Label layoutX="71.0" layoutY="213.0" text="Apellido" />
-            <Label layoutX="78.0" layoutY="260.0" text="Grado" />
-            <Label layoutX="73.0" layoutY="305.0" text="Sección" />
-            <TextField fx:id="txtCui" layoutX="167.0" layoutY="49.0" />
-            <TextField fx:id="txtCodigoPersonal" layoutX="167.0" layoutY="98.0" />
-            <TextField fx:id="txtNombre" layoutX="167.0" layoutY="158.0" />
-            <TextField fx:id="txtApellido" layoutX="167.0" layoutY="208.0" />
-            <TextField fx:id="txtGrado" layoutX="167.0" layoutY="255.0" />
-            <TextField fx:id="txtSeccion" layoutX="167.0" layoutY="300.0" />
+            <Label layoutX="86.0" layoutY="142.0" text="Cui" />
+            <Label layoutX="40.0" layoutY="191.0" text="Codigo Personal" />
+            <Label layoutX="69.0" layoutY="251.0" text="Nombre" />
+            <Label layoutX="69.0" layoutY="301.0" text="Apellido" />
+            <Label layoutX="59.0" layoutY="79.0" text="Grado:">
+               <font>
+                  <Font size="17.0" />
+               </font></Label>
+            <Label layoutX="210.0" layoutY="80.0" text="Sección:">
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
+            <TextField fx:id="txtCui" layoutX="165.0" layoutY="137.0" />
+            <TextField fx:id="txtCodigoPersonal" layoutX="165.0" layoutY="186.0" />
+            <TextField fx:id="txtNombre" layoutX="165.0" layoutY="246.0" />
+            <TextField fx:id="txtApellido" layoutX="165.0" layoutY="296.0" />
             <TableView fx:id="tblEstudiante" layoutX="377.0" layoutY="58.0" prefHeight="363.0" prefWidth="544.0">
               <columns>
                 <TableColumn fx:id="cui" prefWidth="92.0" text="Cui" />
@@ -40,6 +45,17 @@
                   <TableColumn fx:id="seccion" minWidth="0.0" prefWidth="62.0" text="Sección" />
               </columns>
             </TableView>
+            <Label fx:id="txtGrado" layoutX="120.0" layoutY="79.0" prefHeight="17.0" prefWidth="64.0" text="Primero">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="txtSeccion" graphicTextGap="10.0" layoutX="284.0" layoutY="79.0" text="A">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Separator layoutX="30.0" layoutY="99.0" prefHeight="10.0" prefWidth="324.0" />
          </children>
       </Pane>
    </children>
