--- a/NotasAlumnosFX/src/Vista/CargarDatos.fxml
+++ b/NotasAlumnosFX/src/Vista/CargarDatos.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="Controlador.CargarDatosController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.CargarDatosController">
     <stylesheets>
         <URL value="@cargardatos.css" />
     </stylesheets>
@@ -21,5 +21,10 @@
           <TableColumn fx:id="cApelldio" prefWidth="75.0" text="Apellido" />
         </columns>
       </TableView>
+      <Label layoutX="62.0" layoutY="76.0" text="Grado" />
+      <Label layoutX="215.0" layoutY="76.0" text="Seccion" />
+      <Label fx:id="labGrado" layoutX="116.0" layoutY="76.0" text="Primero" />
+      <Label fx:id="labSeccion" layoutX="300.0" layoutY="76.0" text="A" />
+      <Button layoutX="205.0" layoutY="336.0" mnemonicParsing="false" onAction="#btnInscribir" text="Inscribir" />
    </children>
 </AnchorPane>
