--- a/NotasAlumnosFX/src/Vista/MenuImprimirBoletin.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuImprimirBoletin.fxml
@@ -6,6 +6,53 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuImprimirBoletinController">
-    
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuImprimirBoletinController">
+   <children>
+      <Button defaultButton="true" layoutX="204.0" layoutY="349.0" mnemonicParsing="false" text="Imprimir boletín en PDF" />
+      <GridPane layoutX="56.0" layoutY="70.0" prefHeight="60.0" prefWidth="249.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="96.0" minWidth="10.0" prefWidth="70.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="134.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Apellidos" GridPane.rowIndex="1" />
+            <TextField editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Nombre" />
+            <TextField editable="false" GridPane.columnIndex="1" />
+         </children>
+      </GridPane>
+      <Label layoutX="195.0" layoutY="26.0" text="INGRESE CUI" />
+      <TextField layoutX="293.0" layoutY="21.0" prefHeight="31.0" prefWidth="110.0" />
+      <GridPane layoutX="305.0" layoutY="64.0" prefHeight="60.0" prefWidth="239.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="94.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="93.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Grado" />
+            <Label text="Sección" GridPane.rowIndex="1" />
+            <TextField editable="false" GridPane.columnIndex="1" />
+            <TextField editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
+      <TableView layoutX="30.0" layoutY="142.0" prefHeight="188.0" prefWidth="540.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="Curso" />
+          <TableColumn prefWidth="75.0" text="Unidad I" />
+            <TableColumn prefWidth="75.0" text="Unidad II" />
+            <TableColumn prefWidth="77.0" text="Unidad III" />
+            <TableColumn prefWidth="79.0" text="Unidad IV" />
+            <TableColumn prefWidth="79.0" text="Promedio" />
+            <TableColumn prefWidth="79.0" text="A/NO A" />
+        </columns>
+      </TableView>
+   </children>
 </AnchorPane>
