--- a/NotasAlumnosFX/src/Vista/MenuImprimirBoletin.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuImprimirBoletin.fxml
@@ -25,8 +25,8 @@
             <TextField editable="false" GridPane.columnIndex="1" />
          </children>
       </GridPane>
-      <Label layoutX="195.0" layoutY="26.0" text="INGRESE CUI" />
-      <TextField layoutX="293.0" layoutY="21.0" prefHeight="31.0" prefWidth="110.0" />
+      <Label layoutX="152.0" layoutY="26.0" text="INGRESE CUI" />
+      <TextField layoutX="250.0" layoutY="21.0" prefHeight="31.0" prefWidth="110.0" />
       <GridPane layoutX="305.0" layoutY="64.0" prefHeight="60.0" prefWidth="239.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="94.0" />
@@ -54,5 +54,7 @@
             <TableColumn prefWidth="79.0" text="A/NO A" />
         </columns>
       </TableView>
+      <Button layoutX="368.0" layoutY="21.0" mnemonicParsing="false" text="Buscar" />
+      <Button fx:id="btnRegresar" layoutX="17.0" layoutY="349.0" mnemonicParsing="false" onAction="#btnRegresarAlMenuDocente" text="Regresar" />
    </children>
 </AnchorPane>
