--- a/NotasAlumnosFX/src/Vista/MenuEvaluacion.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuEvaluacion.fxml
@@ -31,12 +31,13 @@
       <TextField fx:id="txtPonderacion" layoutX="405.0" layoutY="126.0" />
       <Label layoutX="60.0" layoutY="246.0" text="Listar Actividades " />
       <ChoiceBox layoutX="187.0" layoutY="241.0" onDragDetected="#btnListar" prefWidth="150.0" />
-      <TableView fx:id="tblPersona" layoutX="60.0" layoutY="279.0" onMouseClicked="#seleccionaModificar" prefHeight="216.0" prefWidth="483.0">
+      <TableView fx:id="tblPersona" layoutX="8.0" layoutY="273.0" onMouseClicked="#seleccionaModificar" prefHeight="216.0" prefWidth="586.0">
          <columns>
-            <TableColumn fx:id="EvaluacionId" prefWidth="75.0" text="id Actividad" />
-            <TableColumn fx:id="nombreActividad" prefWidth="231.0" text="Nombre Actividad" />
-            <TableColumn fx:id="tipoActividad" prefWidth="95.0" text="Tipo" />
-            <TableColumn fx:id="ponderacionActividad" prefWidth="81.0" text="Ponderación" />
+            <TableColumn fx:id="tblEvaluacionId" text="id Actividad" />
+            <TableColumn fx:id="tblCurso" prefWidth="159.0" text="Curso" />
+            <TableColumn fx:id="tblNombreActividad" prefWidth="173.0" text="Nombre Actividad" />
+            <TableColumn fx:id="tblPonderacionActividad" prefWidth="88.0" text="Ponderación" />
+            <TableColumn fx:id="tblTipoActividad" prefWidth="85.0" text="Tipo" />
          </columns>
       </TableView>
    </children>
