--- a/NotasAlumnosFX/src/Vista/MenuNotas.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuNotas.fxml
@@ -7,12 +7,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="509.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuNotasController">
+<AnchorPane id="AnchorPane" prefHeight="560.0" prefWidth="782.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuNotasController">
     <stylesheets>
         <URL value="@menunotas.css" />
     </stylesheets>
    <children>
-      <TableView fx:id="tblNotas" layoutX="50.0" layoutY="82.0" prefHeight="214.0" prefWidth="505.0">
+      <TableView fx:id="tblNotas" layoutX="76.0" layoutY="148.0" prefHeight="214.0" prefWidth="688.0">
          <columns>
             <TableColumn fx:id="tbNombre" prefWidth="139.0" text="Nombre" />
             <TableColumn fx:id="tbApellido" prefWidth="140.0" text="Apellido" />
@@ -20,23 +20,22 @@
             <TableColumn fx:id="tbPunto" prefWidth="93.0" text="Nota" />
          </columns>
       </TableView>
-      <Button fx:id="btnModificar" layoutX="450.0" layoutY="384.0" mnemonicParsing="false" onAction="#modificar" text="Modificar" />
-      <Button fx:id="btnEliminar" layoutX="455.0" layoutY="447.0" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
-      <Button fx:id="btnGuardar" layoutX="454.0" layoutY="324.0" mnemonicParsing="false" onAction="#guardar" text="Guardar" />
-      <TextField fx:id="txtNombre" layoutX="200.0" layoutY="311.0" />
-      <TextField fx:id="txtApellido" layoutX="200.0" layoutY="348.0" />
-      <Label layoutX="81.0" layoutY="353.0" text="Apellido:" />
-      <Label layoutX="81.0" layoutY="316.0" text="Nombre:" />
-      <Label layoutX="80.0" layoutY="393.0" text="Curso:" />
+      <Button fx:id="btnModificar" layoutX="447.0" layoutY="444.0" mnemonicParsing="false" onAction="#modificar" text="Modificar" />
+      <Button fx:id="btnEliminar" layoutX="452.0" layoutY="507.0" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
+      <Button fx:id="btnGuardar" layoutX="451.0" layoutY="384.0" mnemonicParsing="false" onAction="#guardar" text="Guardar" />
+      <TextField fx:id="txtNombre" layoutX="206.0" layoutY="394.0" />
+      <TextField fx:id="txtApellido" layoutX="201.0" layoutY="445.0" />
+      <Label layoutX="82.0" layoutY="450.0" text="Apellido:" />
+      <Label layoutX="87.0" layoutY="399.0" text="Nombre:" />
       <Label layoutX="256.0" layoutY="51.0" text="Seccion:" />
       <Label layoutX="82.0" layoutY="51.0" text="Grado: " />
-      <Label layoutX="290.0" layoutY="23.0" text="Notas" />
-      <ChoiceBox fx:id="chCurso" layoutX="200.0" layoutY="387.0" prefHeight="31.0" prefWidth="187.0" />
-      <ChoiceBox fx:id="chActividad" layoutX="200.0" layoutY="425.0" prefHeight="31.0" prefWidth="187.0" />
-      <Label layoutX="80.0" layoutY="431.0" text="Actividad:" />
-      <Label layoutX="80.0" layoutY="469.0" text="Nota:" />
-      <TextField fx:id="txtNota" layoutX="199.0" layoutY="464.0" />
+      <Label layoutX="290.0" layoutY="23.0" text="Registro de Notas" />
+      <ChoiceBox fx:id="chCurso" layoutX="268.0" layoutY="85.0" prefHeight="31.0" prefWidth="187.0" />
+      <ChoiceBox fx:id="chActividad" layoutX="485.0" layoutY="85.0" prefHeight="31.0" prefWidth="187.0" />
+      <Label layoutX="82.0" layoutY="506.0" text="Nota:" />
+      <TextField fx:id="txtNota" layoutX="201.0" layoutY="501.0" />
       <Label fx:id="rGrado" layoutX="128.0" layoutY="51.0" text="Primero" />
       <Label fx:id="rSeccion" layoutX="306.0" layoutY="51.0" prefHeight="7.0" prefWidth="44.0" text="A" />
+      <ChoiceBox fx:id="conBimestre" layoutX="66.0" layoutY="85.0" prefHeight="31.0" prefWidth="187.0" />
    </children>
 </AnchorPane>
